# name_maker

./: Cargo.toml  README.md
src/: lib.rs  main.rs  name_generator.rs
