[package]
name = "name_maker"
description = "Generates random name for a person or a group of person."
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Kenneth L. Marinas <gabrielkennethmarinas@gmail.com>"]
keywords = ["utility", "tool", "library", "random", "id"]
repository = "https://github.com/marshblocker/name_maker"
license = "MIT"

[dependencies]
rand = "0.8.5"
